@@ -67,6 +67,15 @@ settings-deactivate=Standard (__1__) nicht überschreiben
 research-not-available=Warnung: Die Erforschung wird nicht ausgeführt, weil die Mod '__1__' die Forschungsliste kontrolliert
 research-not-available-alternative=Sie bietet derzeit noch keine Schnittstelle für andere Mods an. Übergangsweise kannst Du die Mod __2__ benutzen, welche eine Kopie von __1__ ist, jedoch mit einer entsprechenden Schnittstelle.
 
+[ingteb-name]
+ModuleEffect-consumption=Verbrauch
+ModuleEffect-pollution=Umweltverschmutzung
+ModuleEffect-productivity=Produkivität
+ModuleEffect-speed=Verarbeitungstempo
+
+[ingteb-description]
+ModuleEffect-consumption=Die Maschine verbraucht mehr (oder weniger) Energie
+
 [item-group-name]
 fuel-category=Treibstoffkategorien
 
