@@ -72,6 +72,15 @@ optional-mod-support-activated=Info: support for mod '__1__' activated.
 research-not-available=Warning: The research will not be executed because mod '__1__' controls the research queue, but does not yet provide an interface for other mods. Temporarily you can use the mod __2__, which is a copy of __1__, but with an appropriate interface.
 research-not-available-alternative=It does not currently offer an interface for other mods. Temporarily you can use the mod __2__, which is a copy of __1__, but with an appropriate interface.
 
+[ingteb-name]
+ModuleEffect-consumption=Consumption
+ModuleEffect-pollution=Pollution
+ModuleEffect-productivity=Productivity
+ModuleEffect-speed=Speed
+
+[ingteb-description]
+ModuleEffect-consumption=The machine consumes more (or less) energy
+
 [item-group-name]
 fuel-category=fuel categories
 
